# agent-no-bs

./: pyproject.toml
src/: run_agents.py
src/agent_no_bs/: __init__.py  agent.py  environnement.py  objects.py  observation.py  sensors.py
