[project]
name = "agent-no-bs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Viagounet", email = "ismael.rousseau@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
agent-no-bs = "agent_no_bs:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
